--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 				xmlns:s="library://ns.adobe.com/flex/spark" 
-				xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" minHeight="23" >
+				xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" minHeight="23" contentBackgroundAlpha="0">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -60,7 +60,7 @@
 					{
 						valueField = new TextInput;
 						valueField.editable = false;
-						valueField.setStyle("borderAlpha", "0");
+						valueField.setStyle("borderVisible", "false");
 						valueField.setStyle("color", "#FFFFFF");
 						valueField.text =  objectVO.id;
 						valueField.width = 128;
@@ -401,12 +401,12 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:HGroup id="group" width="100%" height="100%" verticalAlign="middle" gap="2" paddingLeft="8" paddingTop="5" paddingBottom="5">
-		<s:RichText id="rtextLabel" minHeight="21" width="100%" color="#FFFFFF" fontFamily="Verdana" fontSize="10" fontWeight="bold"
+	<s:HGroup id="group" width="100%" height="100%" verticalAlign="middle" gap="2" paddingLeft="8" paddingTop="5" paddingBottom="5" paddingRight="10">
+		<s:RichText id="rtextLabel" minHeight="21" width="100%" color="#FFFFFF" fontFamily="Arial" fontSize="10" fontWeight="bold"
 					paddingBottom="2" paddingTop="2" textAlign="left" verticalAlign="middle" verticalCenter="0"/>
 	</s:HGroup>
 	
-	<s:Rect width="5" height="100%">
+	<s:Rect width="3" height="100%">
 		<s:fill>
 			<s:SolidColor id="secondColor" color="#3A3A3A"/>
 		</s:fill>
@@ -420,7 +420,7 @@
 	
 	<s:Line bottom="0" width="100%">
 		<s:stroke>
-			<s:SolidColorStroke color="#000000" alpha="0.7" weight="1"/>
+			<s:SolidColorStroke color="#000000" alpha="0.2" weight="1"/>
 		</s:stroke>
 	</s:Line>
 	
