Delete trace resize
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7063 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -7,8 +7,7 @@
 					  skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.EditorSkin"
 					  preinitialize="skinnablecontainer1_preinitializeHandler(event)"
 					  implements="net.vdombox.ide.modules.wysiwyg.interfaces.IEditor"
-					  creationComplete="skinnablecontainer1_creationCompleteHandler(event)"
-					  resize="trace('VdomObject')">
+					  creationComplete="skinnablecontainer1_creationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
@@ -291,7 +290,7 @@
 		<components:PageRenderer id="renderer" 
 								 top="0" bottom="0" left="0" right="0"
 								 selectedRenderer="{ selectedRenderer }" includeIn="wysiwyg, wysiwygDisabled, normal, disabled" 
-								 resize="trace('PageRenderer')" mouseMove="mouseMoveOnPageRenderer(event)"/>
+								 mouseMove="mouseMoveOnPageRenderer(event)"/>
 
 		<editors:XMLScriptEditor id="xmlScriptEditor"
 								 height="100%" width="100%"
