--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -6,8 +6,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 width="100%" height="100%"
-			 creationComplete="creationCompleteHandler()"
-			 resize="trace('EditorSkin')">
+			 creationComplete="creationCompleteHandler()">
 
 	<fx:Metadata>
 		<![CDATA[ 
