--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -2,8 +2,7 @@
 <s:SparkSkin xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
-			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%"
-			 resize="trace('PageSkin')">
+			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%">
 
 	<s:states>
 
@@ -40,7 +39,7 @@
 		<s:Group>
 			<s:Group id="background" width="{dataGroup.width}" height="{dataGroup.height}" resize="parentApplication.dispatchEvent(new Event('resizeMainWindow'))"/> <!-- setbackground image and not set all element-->
 
-			<s:DataGroup id="dataGroup" width="100%" height="100%" resize="trace('DataGroup')"/>   <!-- set all element-->
+			<s:DataGroup id="dataGroup" width="100%" height="100%"/>   <!-- set all element-->
 			
 			<s:Group id="linegroup" width="{dataGroup.width}" height="{dataGroup.height}" />
 
