Add line linking. step 2
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7064 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
@@ -69,7 +69,7 @@
 
 		<s:stroke>
 
-			<s:SolidColorStroke color.highlighted="green" color.hovered="gray" color.select="gray"
+			<s:SolidColorStroke color.highlighted="green" color.hovered="gray" color.select="#0000FF"
 								weight="2" />
 		</s:stroke>
 	</s:Rect>
