--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -1,7 +1,6 @@
 <s:SparkSkin xmlns:components="net.vdombox.ide.core.view.components.*" xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:s="library://ns.adobe.com/flex/spark"
 			 
-			 height="600" width="800"
-			 alpha.disabledGroup="0.5">
+			 height="600" width="800">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.MainWindow")]
