resourcePreviewWindow  -->  extends Window
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7071 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourcePreviewWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourcePreviewWindowSkin.mxml
@@ -28,6 +28,8 @@
 		<s:State name="disabledWithControlBar"/>
 		<s:State name="inactiveWithControlBar"/>
 		<s:State name="normalWithControlBar"/>
+		<s:State name="normalAndInactive"/>
+		<s:State name="disabledAndInactive"/>
 	</s:states>
 	
 	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
