git-svn-id: http://svn.vdombox.ru/flextools/trunk@7076 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
@@ -40,6 +40,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.utils.VersionUtils;
 			static private const exclusions : Array = [ "titleIconImage", "titleText" ];
 
 			/**
@@ -107,7 +108,7 @@
 						fontSize="10"/>
 			
 			<s:RichText height="100%" 
-						text="v.2.0.1008" color="#CBCBCB"
+						text="{VersionUtils.getApplicationVersion()}" color="#CBCBCB"
 						fontSize="10"/>
 		</s:HGroup>
 				
