--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -599,7 +599,7 @@
 									ContextManager.templateStruct.isStepDebug = true;
 									break;
 							}
-							
+							// проверка графа на ошибки
 							var validateArr:Array = ContextManager.templateStruct.validate().array;
 							
 							pnl_problems.array = validateArr;
