--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -27,6 +27,7 @@
 			public function set value(value:String):void
 			{
 				_value = value;
+				lbl.text = value;
 			}
 			
 			public function initChars(_interface : uint, _attributeDescriptionVO : AttributeDescriptionVO) : void
