--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
@@ -2,7 +2,7 @@
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml"
 		 
 		 height="20" width="100%"
-		 borderColor="#FFFFFF" borderStyle="solid" horizontalAlign="right" verticalAlign="middle" xmlns:s="library://ns.adobe.com/flex/spark">
+		 borderStyle="solid" horizontalAlign="right" verticalAlign="middle" xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<mx:Script>
 		<![CDATA[
