--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -172,7 +172,6 @@
 			{
 				valueField = new Multiline();
 				valueField.value =  _attributeVO.value;
-				valueField.toolTip = help;
 				valueField.width = 128;
 				valueField.height = 21;
 				secondElement = valueField as UIComponent;
@@ -184,7 +183,6 @@
 			{
 				valueField = new ColorPicker;
 				valueField.value =  _attributeVO.value ;
-				valueField.toolTip = help;
 				valueField.width = 128;
 				valueField.height = 21;
 				secondElement = valueField as UIComponent;
@@ -226,7 +224,6 @@
 			{
 				valueField = new ResourceSelector;
 				valueField.value =  _attributeVO.value ;
-				valueField.toolTip = help;
 				valueField.width = 128;
 				valueField.height = 21;
 				secondElement = valueField as UIComponent;
@@ -238,7 +235,6 @@
 			{
 				valueField = new TextInputAttribute;
 				valueField.value =  _attributeVO.value ;
-				valueField.toolTip = help;
 				valueField.width = 128;
 				valueField.height = 21;
 				secondElement = valueField as UIComponent;
@@ -293,7 +289,6 @@
 			{
 				valueField = new TextInputAttribute;
 				valueField.value =  _attributeVO.value ;
-				valueField.toolTip = help;
 				valueField.width = 128;
 				valueField.height = 21;
 				secondElement = valueField as UIComponent;
@@ -413,7 +408,7 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:HGroup id="group" width="100%" height="100%" verticalAlign="middle" gap="2" paddingLeft="8" paddingTop="5" paddingBottom="5" paddingRight="10">
+	<s:HGroup id="group" width="100%" height="100%" verticalAlign="middle" gap="2" paddingLeft="8" paddingTop="5" paddingBottom="5" paddingRight="10" toolTip="{help}">
 		<s:RichText id="rtextLabel" minHeight="21" width="100%" color="#FFFFFF" fontFamily="Arial" fontSize="10" fontWeight="bold"
 					paddingBottom="2" paddingTop="2" textAlign="left" verticalAlign="middle" verticalCenter="0"/>
 	</s:HGroup>
