--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
@@ -30,7 +30,7 @@
 			
 		]]>
 	</mx:Script>
-	<s:Group width="100%" height="20">
+	<s:Group width="100%" height="20" toolTip="{value}">
 		
 		<s:Rect width="100%" height="100%">
 			<s:fill>
