--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -93,7 +93,7 @@
 
 		]]>
 	</fx:Script>
-	<s:Group>
+	<s:Group toolTip="{_value}">
 		<s:Rect width="100%" height="100%">
 			<s:fill>
 				<s:SolidColor color="#FFFFFF"/>
